# anaconda.enterprise.mlflow.plugin.backend.project

./: .gitattributes  .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  anaconda-project.yml  environment.github.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: pull-request.yml  python-publish.yml
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst
docs/source/api/: project.rst  project.services.rst
example/project/: MLproject  anaconda-project.yml  conda.yml  entry_point.ipynb  process_one.py
example/project_hyperopt/: anaconda-project-lock.yml  anaconda-project.yml  search_hyperopt.py  search_random.py  train.py  tune.ipynb
example/project_process/: MLproject  anaconda-project-lock.yml  anaconda-project.yml  process_one.py  start.py
example/project_template/: .gitignore  MLproject  anaconda-project.yml  entry_point.ipynb  start.py
example/project_template/steps/: process_one.py
examples/project_hyperopt/: MLproject
examples/project_process/: process_one.py  start.py
examples/project_template/: MLproject  anaconda-project.yml
examples/project_template/steps/: main.py
mlflow_adsp/: __init__.py  _version.py  backend.py  submitted_run.py  utils.py
src/: submitted_run.py
src/anaconda/enterprise/mlflow/plugin/: ae_backend.py  utils.py  worker.py
src/anaconda/enterprise/mlflow/plugin/backend/: __init__.py  ae_backend.py  ae_submitted_run.py  utils.py
src/contacts/errors/: plugin.py
test/unit/: env.offline  setup.py  test_submitted_run.py  test_utils.py
(+9 files in other folders)
